--- a/bosh/ruby-app-release/jobs/rubyweb/templates/config.erb
+++ b/bosh/ruby-app-release/jobs/rubyweb/templates/config.erb
@@ -1,16 +1,13 @@
--
+#!/bin/bash
 
-port = <%=
+<%=
 
-port = p("port")
+  port = p("port")
 
-if port < 1024 or port > 4000
-  raise "Invalid port number"
-end
-
-if (port.eql? 8080) || (port.eql? 8081)
-  raise "Wrong port number"
-end
-
-port
+  if port <= 1024 or (port > 4000 && port < 8000)
+    raise "Invalid port number"
+  end
+  # "{'port' => #{port} }"
+  "{port : #{port} }"
 %>
+
